--- a/Assignment 1.ipynb
+++ b/Assignment 1.ipynb
@@ -37,8 +37,8 @@
     }
    ],
    "source": [
-    "first=input(\"\")\n",
-    "last = input(\" \")\n",
+    "first=input(\"first name\")\n",
+    "last = input(\"last name \")\n",
     "print ( last + \" \" + first)"
    ]
   },
